Changed: moved report parsing to separate class (single responsibility).

--- a/day02/CMakeLists.txt
+++ b/day02/CMakeLists.txt
@@ -5,8 +5,20 @@ project(Solver)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Shared source files
+set(SHARED_SOURCES
+    src/report.cpp
+    src/report_parser.cpp
+)
+
+# Test source files
+set(TEST_SOURCES
+    test/report_test.cpp
+    test/report_parser_test.cpp
+)
+
 # Add the executable
-add_executable(solver src/main.cpp src/report.cpp)
+add_executable(solver src/main.cpp ${SHARED_SOURCES})
 
 # Include directories for headers
 include_directories(include)
@@ -16,7 +28,7 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
 # Add the test executable
-add_executable(solver_test test/report_test.cpp src/report.cpp)
+add_executable(solver_test ${TEST_SOURCES} ${SHARED_SOURCES})
 
 # Link Google Test libraries to the test executable
 target_link_libraries(solver_test GTest::GTest GTest::Main pthread)
