Added: day 2 solver.

--- a/day02/CMakeLists.txt
+++ b/day02/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SHARED_SOURCES
     src/report.cpp
     src/report_parser.cpp
     src/report_checker.cpp
+    src/solver.cpp
 )
 
 # Test source files
@@ -17,6 +18,7 @@ set(TEST_SOURCES
     test/report_test.cpp
     test/report_parser_test.cpp
     test/report_checker_test.cpp
+    test/solver_test.cpp
 )
 
 # Add the executable
