--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake g++ make googletest
+          sudo apt-get install -y cmake g++ make googletest lcov
           cd /usr/src/googletest
           sudo cmake -Bbuild -H.
           sudo cmake --build build --target install
@@ -50,3 +50,15 @@ jobs:
         run: |
           cd day02/build
           ctest --output-on-failure -R end_to_end_tests
+
+      - name: Generate code coverage
+        run: |
+          lcov --rc lcov_branch_coverage=1 --rc geninfo_all_blocks=1 --directory day02 --capture --output-file coverage.info
+          lcov --remove coverage.info '/usr/*' '*/test/*' --output-file coverage_filtered.info
+          genhtml coverage_filtered.info --output-directory coverage_report
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: day02/build/coverage_report
