Changed: making sure we're building from scratch.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build
         run: |
           cd day02/build
-          make
+          make clean && make
 
       - name: Run Unit Tests
         run: |
