--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,9 @@ jobs:
 
       - name: Generate code coverage
         run: |
-          lcov --rc lcov_branch_coverage=1 --rc geninfo_all_blocks=1 --directory day02 --capture --output-file coverage.info
+          // There seems to be a bug in gcov that will misreport some block ends.
+          // At the moment this only happens in test code, so we ignore the mismatch.
+          lcov --rc lcov_branch_coverage=1 --rc geninfo_all_blocks=1 --directory day02 --capture --output-file coverage.info --ignore-errors mismatch
           lcov --remove coverage.info '/usr/*' '*/test/*' --output-file coverage_filtered.info
           genhtml coverage_filtered.info --output-directory coverage_report
 
