Fixed: using incorrect coverage report directory.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,4 +63,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
-          path: day02/build/coverage_report
+          path: coverage_report
