--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Convert LCOV to Cobertura
         run: python /usr/local/bin/lcov_cobertura.py coverage_filtered.info --output coverage.cobertura.xml
 
-      - name: Code Coverage Summary Report
+      - name: Generate code coverage summary report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
           filename: coverage.cobertura.xml
@@ -80,3 +80,6 @@ jobs:
           indicators: true
           output: both
           thresholds: '60 80'
+
+      - name: Add code coverage summary to build summary
+        run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
