--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,18 +40,19 @@ jobs:
 
       - name: Run Unit Tests
         run: |
+          echo "## Test Summary" >> $GITHUB_STEP_SUMMARY
           cd day02/build
-          ctest --output-on-failure -R unit_tests
+          ctest --output-on-failure -R unit_tests | tee $GITHUB_STEP_SUMMARY
 
       - name: Run Integration Tests
         run: |
           cd day02/build
-          ctest --output-on-failure -R integration_tests
+          ctest --output-on-failure -R integration_tests | tee $GITHUB_STEP_SUMMARY
 
       - name: Run End-to-End Tests
         run: |
           cd day02/build
-          ctest --output-on-failure -R end_to_end_tests
+          ctest --output-on-failure -R end_to_end_tests | tee $GITHUB_STEP_SUMMARY
 
       - name: Generate code coverage
         run: |
