--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,8 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
+                "-I",
+                "${fileDirname}/../include",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
